# PortAtlas

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  pyproject.toml  tsconfig.base.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
contracts/openapi/: v1.json
docs/adr/: 0001-runtime-architecture.md  0002-persistence.md  0003-host-collector.md  0004-docker.md  0005-sse.md  0006-ui-primitives.md  0007-packaging.md  0008-project-worktree-identity.md  0009-allocator.md  0010-manifest.md  0011-auth.md  0012-mcp.md  0013-plugin-boundary.md  0014-telemetry.md  0015-apache-licensing-sponsorship.md  0016-conditional-ai.md  0017-provider-abstraction.md  0018-ai-permission-boundary.md  0019-ai-retention.md  0020-embeddings-deferral.md  0021-structured-output.md  0022-prompt-injection-defense.md  0023-working-name-collision-trademark-clearance.md  README.md
docs/architecture/: hld.md  system-architecture.md  system-context.md
docs/design/: ai-context-builder.md  ai-structured-output.md  allocator-design.md  api-design.md  collector-design.md  configuration-schema.md  conflict-engine.md  data-model.md  domain-model.md  error-model.md  lld.md  local-ai-design.md  mcp-design.md  ollama-provider.md  project-manifest-schema.md  scanner-design.md
docs/operations/: backup-and-restore.md  configuration.md  development-setup.md  diagnostic-bundle.md  local-ai-troubleshooting.md  local-installation.md  ollama-setup.md  troubleshooting.md
docs/product/: backlog.md  brd.md  information-architecture.md  personas.md  prd.md  project-charter.md  roadmap.md  scope-and-non-goals.md  success-metrics.md  user-journeys.md  vision.md  wireframes.md
docs/project/: assumptions-register.md  decision-register.md  first-checkpoint-plan.md  gate-2-approval.md  gate-3-evidence.md  gate-3-packaging-research.md  gate-3-sprint-brief.md  gate-4-sprint-brief.md  open-questions.md  research-sources.md  risk-register.md  work-log.md
docs/releases/: mvp-checklist.md  release-process.md  versioning.md
docs/requirements/: acceptance-criteria.md  assumptions-and-constraints.md  functional-requirements.md  non-functional-requirements.md  srs.md  traceability-matrix.md
docs/security/: ai-data-handling.md  local-ai-threat-model.md  mcp-safety.md  permissions.md  privacy-model.md  prompt-injection-defense.md  secret-redaction.md  threat-model.md
docs/testing/: local-ai-evaluation.md  performance-plan.md  platform-compatibility.md  qa-plan.md  test-data-strategy.md  test-strategy.md  uat-plan.md
scripts/: __init__.py  check.py  check_dco.py  check_isolation.py  generate_contracts.py  packaging_spike.py  service_smoke.py  validate_docs.py  validate_foundation.py
services/core/migrations/: env.py
tests/: test_check.py  test_check_dco.py  test_check_isolation.py  test_validate_docs.py  test_validate_foundation.py
tests/architecture/: test_domain_boundaries.py
tests/contract/: test_api_contract.py  test_cli_contract.py  test_mcp_contract.py
tests/fakes/: __init__.py  persistence.py
tests/fixtures/ai/: manifest.json
tests/fixtures/allocator/: manifest.json
tests/fixtures/capacity/: manifest.json
tests/fixtures/docker/: manifest.json
tests/fixtures/project_identity/: manifest.json
tests/fixtures/runtime/: manifest.json
tests/fixtures/scanners/: manifest.json
tests/integration/: test_alembic_migrations.py  test_optional_degradation.py  test_postgresql_compatibility.py  test_sqlalchemy_uow.py
tests/security/: test_tokens.py
(+57 files in other folders)
