[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "portatlas-foundation"
version = "0.0.0.dev0"
description = "Private engineering foundation for the PortAtlas working title"
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = "Apache-2.0"
authors = [{ name = "PortAtlas contributors" }]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
  "alembic==1.18.5",
  "fastapi==0.139.0",
  "platformdirs==4.10.0",
  "pydantic==2.13.4",
  "sqlalchemy==2.0.51",
  "typer==0.26.8",
  "uvicorn==0.51.0",
]

[project.optional-dependencies]
docker = ["docker==7.2.0"]
host = ["psutil==7.2.2"]
mcp = ["mcp==1.28.1"]
postgres = ["psycopg[binary]==3.3.4"]

[project.scripts]
portatlas-foundation = "portatlas.cli.app:main"

[dependency-groups]
build = ["hatchling==1.31.0"]
dev = [
  "httpx==0.28.1",
  "hypothesis==6.156.6",
  "import-linter==2.13",
  "mypy==2.2.0",
  "pip-audit==2.10.1",
  "pip-licenses==5.5.5",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.22",
]
packaging = ["pyinstaller==6.21.0"]

[tool.hatch.build.targets.wheel]
packages = ["services/core/src/portatlas"]

[tool.hatch.build.targets.sdist]
include = [
  "/services/core/src/portatlas",
  "/README.md",
  "/LICENSE",
]

[tool.uv]
default-groups = ["dev"]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = ["dist", "build", "artifacts"]

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "ASYNC",
  "B",
  "C4",
  "DTZ",
  "E",
  "F",
  "I",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "PTH",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "S101",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG", "PLR2004", "S101"]
"scripts/**/*.py" = ["T201"]

[tool.mypy]
python_version = "3.13"
strict = true
pretty = true
show_error_codes = true
mypy_path = "services/core/src"
files = ["services/core/src", "scripts"]
exclude = ["build", "dist", "artifacts"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--import-mode=importlib",
]
pythonpath = [".", "services/core/src"]
testpaths = ["tests"]
markers = [
  "postgres: requires the explicit PostgreSQL compatibility profile",
  "packaging: exercises the bounded packaging research spike",
]
filterwarnings = [
  "error",
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["portatlas"]
omit = [
  "*/portatlas/__main__.py",
  "*/portatlas/ai/contracts.py",
  "*/portatlas/application/unit_of_work.py",
  "*/portatlas/collectors/contracts.py",
  "*/portatlas/scanners/contracts.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 85

[tool.importlinter]
root_packages = ["portatlas"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Domain is independent from adapters and frameworks"
type = "forbidden"
source_modules = ["portatlas.domain"]
forbidden_modules = [
  "alembic",
  "docker",
  "fastapi",
  "mcp",
  "platformdirs",
  "psutil",
  "pydantic",
  "sqlalchemy",
  "typer",
  "uvicorn",
  "portatlas.ai",
  "portatlas.api",
  "portatlas.cli",
  "portatlas.collectors",
  "portatlas.config",
  "portatlas.mcp",
  "portatlas.persistence",
  "portatlas.scanners",
  "portatlas.security",
]

[[tool.importlinter.contracts]]
name = "Application does not depend on delivery adapters"
type = "forbidden"
source_modules = ["portatlas.application"]
forbidden_modules = [
  "portatlas.ai",
  "portatlas.api",
  "portatlas.cli",
  "portatlas.collectors",
  "portatlas.mcp",
  "portatlas.persistence",
  "portatlas.scanners",
]
